Quick fix for text alignment on AngularJSDisplay.

--- a/src/less/angularJSExampleDisplay.less
+++ b/src/less/angularJSExampleDisplay.less
@@ -73,9 +73,9 @@ div#angularJSExampleDisplayWrapper {
   margin: auto;
   text-transform: capitalize;
   font-family: "Open Sans", Helvetica, Arial, sans-serif;
-  text-align: -moz-right;
-  text-align: -webkit-right;
-  text-align: right;
+  //text-align: -moz-right;
+  //text-align: -webkit-right;
+  //text-align: right;
 }
 
 div#angularJSExampleDisplayCurrentConditions {
